--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <link rel="stylesheet" href="./notifier-master/dist/css/notifier.css" />
 
-    <link rel="stylesheet" href="../dist/css/style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
     <div class="under-construction">
