--- a/index.html
+++ b/index.html
@@ -564,7 +564,7 @@
           </div>
         </div>
       </div>
-      <footer>&copy; Copyright all rights reserved 2021</footer>
+      <footer> Copyright &copy; 2021 Sk kaushik. All rights reserved </footer>
     </section>
 
     <script
