--- a/index.html
+++ b/index.html
@@ -73,8 +73,7 @@
 
               <h3>Hello! I am Sk Kaushik.</h3>
               <p>
-                Creative Front-End Developer with 2+ years of experience in Web
-                Design and Development. Seeking an opportunity to apply skills
+                Creative Front-End Developer and Designer. Seeking an opportunity to apply skills
                 in web development to meet challenging work assignments, support
                 the team and learn from them. Motivated to continue to learn
                 things and grow. Good at communicating and creativity. Dedicated
